[package]
name = "llm-mcp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "llm-mcp"
path = "src/main.rs"

[dependencies]
anyhow = "1"
llm-sdk = { git = "https://github.com/Osso/llm-sdk" }
rmcp = { version = "0.9", features = ["server", "transport-io"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt", "macros"] }
