[package]
name = "llm-mcp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "llm-mcp"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
llm-agent = { git = "https://github.com/Osso/llm-agent" }
llm-sdk = { path = "/syncthing/Sync/Projects/lib/llm-sdk" }
rmcp = { version = "0.9", features = ["server", "transport-io"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
tokio = { version = "1", features = ["rt", "macros", "process", "io-util"] }
